--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,1 +1,3 @@
-
+name = "d4rko"            # debe coincidir con el nombre del Worker (minúsculas)
+main = "src/index.ts"
+compatibility_date = "2025-09-07"
