--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,3 @@
-name: Deploy Cloudflare Worker (D4RKO-REST)
-
-on:
-  push:
-    branches: [ "main" ]
-  workflow_dispatch:
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -13,11 +6,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # AÑADIDO: instala dependencias para que wrangler pueda empaquetar "yaml" y TS
       - uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - run: npm ci
+
+      # Instala dependencias sin lockfile (evitamos npm ci)
+      - run: npm install --no-audit --no-fund
 
       - name: Deploy with Wrangler
         uses: cloudflare/wrangler-action@v3
